2007-08-13  Sven Neumann  <sven@gimp.org>

	* modules/Makefile.am (libcdisplay_lcms_la_LIBADD): link with
	gdi32 on PLATFORM_WIN32.

	* modules/cdisplay_lcms.c: changed include order to fix the build
	on MingW (see bug #78265).

2007-08-13  Martin Nordholts  <martinn@svn.gnome.org>

	* app/tools/gimprectangleoptions.c (gimp_rectangle_options_gui):
	Put the auto-mode GtkImage to the right of the Aspect ratio/Size
	entry instead of to the left.

2007-08-12  Martin Nordholts  <martinn@svn.gnome.org>

	* app/tools/gimprectangleoptions.c (gimp_rectangle_options_gui):
	Set a 16x16 size request on the auto-mode images.

2007-08-12  Martin Nordholts  <martinn@svn.gnome.org>

	* app/tools/gimprectangleoptions.c (gimp_rectangle_options_gui):
	Right-align X, Y, Width and Height entries.

2007-08-12  Martin Nordholts  <martinn@svn.gnome.org>

	* app/tools/gimprectangleoptions.[ch]: Setup a
	GIMP_STOCK_AUTO_MODE GtkImage to be shown in the options when
	Fixed: Aspect ratio/Size entries are in auto-mode.

	* themes/Default/images/Makefile.am: Added
	stock-auto-mode-16.png (which is a copy of
	preferences/folders-interp-16.png for now).

	* libgimpwidgets/gimpstock.[ch]: Added GIMP_STOCK_AUTO_MODE.

2007-08-12  Sven Neumann  <sven@gimp.org>

	* modules/cdisplay_lcms.c (cdisplay_lcms_get_display_profile):
	applied patch from Yoshinori Yamakawa that adds code to get the
	monitor profile from Win32.

	* app/dialogs/preferences-dialog.c: enabled the toggle for
	"display-profile-from-gdk" on all systems.

2007-08-11  Sven Neumann  <sven@gimp.org>

	* libgimpwidgets/gimpenumcombobox.h
	* libgimpwidgets/gimpenumlabel.h
	* libgimpwidgets/gimpenumstore.h
	* libgimpwidgets/gimpenumwidgets.h
	* libgimpwidgets/gimppropwidgets.h: added missing G_BEGIN_DECLS
	and G_END_DECLS.

2007-08-11  Michael Natterer  <mitch@gimp.org>

	* app/actions/tools-actions.c
	* app/actions/tools-commands.[ch]: removed unused rectangle tool
	actions.

2007-08-11  Sven Neumann  <sven@gimp.org>
